--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -1,5 +1,5 @@
-@import '../../styles/colors';
-@import '../../styles/mixins';
+@import './colors';
+@import './mixins';
 
 .slider {
   height: 20px;
