--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -63,3 +63,17 @@
   position: relative;
   top: 10px;
 }
+
+.em-modal {
+  z-index: 2147484000;
+  position: absolute;
+  background-color: @modalBG;
+  border: 1px solid @modalBorder;
+  font-family: sans-serif;
+    .em-title {
+      padding: 5px 10px;
+      font-size: 15px;
+      color: #fff;
+      margin: 0;
+    }
+  }
