--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -13,6 +13,12 @@
   -webkit-user-drag: none;
   -webkit-user-select: none;
   -ms-user-select: none;
+  &.cross-transition {
+    transition: width 250ms, left 150ms, border 150ms, height 150ms, width 150ms;
+  }
+  &.cross-transition-0 {
+    transition: width 0ms, left 0ms, border 150ms, height 150ms, width 150ms !important;
+  }
   .fill {
     width: 0;
     transition: width 0ms;
@@ -21,6 +27,7 @@
     left: 0;
     cursor: default;
     background-color: transparent;
+    transition: inherit;
   }
   .unfill {
     width: 0;
@@ -30,6 +37,7 @@
     right: 0;
     cursor: default;
     background-color: @water;
+    transition: inherit;
   }
   .thumb {
    height: 18px;
@@ -39,7 +47,7 @@
    border-color: @fill;
    border-radius: 50%;
    position: absolute;
-   transition: left 0ms, border 150ms, height 150ms, width 150ms;
+   transition: inherit;
    z-index: 5;
    &:active {
      height: 0 !important;
@@ -56,12 +64,14 @@
   background-color: @fill;
   position: relative;
   top: 10px;
+  transition: inherit;
 }
 .unfill-child {
   height: 2px;
   background-color: @body;
   position: relative;
   top: 10px;
+  transition: inherit;
 }
 
 .em-modal {
