added: multiple usecase of sliders

--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -81,8 +81,9 @@
   border: 1px solid @modalBorder;
   font-family: sans-serif;
     .em-title {
-      padding: 5px 10px;
-      font-size: 15px;
+      margin: 0px !important;
+      padding: 5px 10px !important;
+      font-size: 15px !important;
       color: #fff;
       margin: 0;
     }
