--- a/lib/index.css
+++ b/lib/index.css
@@ -77,8 +77,9 @@
   font-family: sans-serif;
 }
 .em-modal .em-title {
-  padding: 5px 10px;
-  font-size: 15px;
+  margin: 0px !important;
+  padding: 5px 10px !important;
+  font-size: 15px !important;
   color: #fff;
   margin: 0;
 }
